--- a/Api.IBPR.WebSite.Core/Api.IBPR.Website.Application/Api.IBPR.Website.Application.csproj
+++ b/Api.IBPR.WebSite.Core/Api.IBPR.Website.Application/Api.IBPR.Website.Application.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="Api.IBPR.Website.Application.csproj" />
+    <ProjectReference Include="..\Api.IBPR.Website.Domain\Api.IBPR.Website.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
