--- a/Api.IBPR.WebSite.Infrastructure/Api.IBPR.Website.Persistence/Api.IBPR.Website.Persistence.csproj
+++ b/Api.IBPR.WebSite.Infrastructure/Api.IBPR.Website.Persistence/Api.IBPR.Website.Persistence.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6" />
+    <PackageReference Include="Oracle.EntityFrameworkCore" Version="6.21.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Api.IBPR.WebSite.Core\Api.IBPR.Website.Domain\Api.IBPR.Website.Domain.csproj" />
   </ItemGroup>
 
 </Project>
