--- a/Api.IBPR.Website.Presentation/Api.IBPR.Website.WebAPI/appsettings.json
+++ b/Api.IBPR.Website.Presentation/Api.IBPR.Website.WebAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "Server=localhost; Database=postgres; Port=5432; User Id=postgres; Password=123456"
+    "PostgresConnection": "Server=localhost; Database=postgres; Port=5432; User Id=postgres; Password=123456",
+    "OracleConnection": "User Id=admin;Password=admin;Data Source=localhost;Min Pool Size=1;Connection Lifetime=60;Connection Timeout=60;Incr Pool Size=1;Decr Pool Size=1"
   },
   "Logging": {
     "LogLevel": {
