Se agregan librerias externas

--- a/Api.IBPR.WebSite.Core/Api.IBPR.Website.Application/Api.IBPR.Website.Application.csproj
+++ b/Api.IBPR.WebSite.Core/Api.IBPR.Website.Application/Api.IBPR.Website.Application.csproj
@@ -1,7 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Api.IBPR.Website.Domain\Api.IBPR.Website.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\ArticleFeatures\GetAllArticle\" />
   </ItemGroup>
 
   <PropertyGroup>
