--- a/Api.IBPR.Website.Presentation/Api.IBPR.Website.WebAPI/Api.IBPR.Website.WebAPI.csproj
+++ b/Api.IBPR.Website.Presentation/Api.IBPR.Website.WebAPI/Api.IBPR.Website.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Api.IBPR.Website.Core\Api.IBPR.Website.Application\Api.IBPR.Website.Application.csproj" />
     <ProjectReference Include="..\..\Api.IBPR.WebSite.Infrastructure\Api.IBPR.Website.Persistence\Api.IBPR.Website.Persistence.csproj" />
   </ItemGroup>
 
