data relation modified in db

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,12 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+Api.IBPR.Website.Application/obj/Api.IBPR.Website.Application.csproj.nuget.dgspec.json
+*.json
+Api.IBPR.Website.Application/obj/Api.IBPR.Website.Application.csproj.nuget.dgspec.json
+*.json
+Api.IBPR.Website.Application/obj/project.assets.json
+Api.IBPR.Website.WebAPI/obj/staticwebassets.pack.sentinel
+Api.IBPR.Website.WebAPI/obj/project.nuget.cache
+Api.IBPR.Website.WebAPI/obj/Debug/net6.0/ref/Api.IBPR.Website.WebAPI.dll
+Api.IBPR.Website.Domain/obj/project.nuget.cache
