add new controller and exception for these

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,7 @@ Api.IBPR.Website.WebAPI/obj/staticwebassets.pack.sentinel
 Api.IBPR.Website.WebAPI/obj/project.nuget.cache
 Api.IBPR.Website.WebAPI/obj/Debug/net6.0/ref/Api.IBPR.Website.WebAPI.dll
 Api.IBPR.Website.Domain/obj/project.nuget.cache
+
+
+#others
+dataEXamples
