--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GH_PAGES_TOKEN  }}
+        github_token: ${{ secrets.GITHUB_TOKEN  }}
         publish_dir: ./Api.IBPR.Website.WebAPI/bin/Release/net6.0/publish/
     
     env:
